--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-uuid": "^1.0.2",
+    "shortid": "^2.2.16",
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
